XMLtoCSV/objects/unpackaged/objects/EM_Attendee_vod__c.object
<CustomObject>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture business address state for walk-in attendees</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the person invited to the medical event.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared_Signature_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Attendee Title. If the attendee is an Account, this data is copied from the PersonTitle field on the account.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User attending the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>EM_Attendee_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCYC Events Attendee Veteran Affairs indicator</description>
        <label>Veteran Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vessel_Number_vod__c</fullName>
        <description>Used to store travel details, such as a flight or train number.</description>
        <label>Vessel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Reference_ID_vod__c</fullName>
        <description>Reference ID of the person associated with the reconciled attendee. Required for backend attendee reconciliation process.</description>
        <label>Walk In Reference ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Walk_In_Status_vod__c</fullName>
        <description>Used to track the status of walk-in attendees at an event.</description>
        <label>Walk-In Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs_Reconciliation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Used to store the attendee&apos;s zip code.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>EA-{0000000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <recordTypes>
        <fullName>Attendee_vod</fullName>
        <active>true</active>
        <description>Attendee</description>
        <label>Attendee_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>